--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">    
 
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/39961fef15.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
         <nav>
-            <h3 class="nav-title">Ma<span class="text-primary-color">r</span>y</h3>
+            <h3 class="nav-title">Ha<span class="text-primary-color">m</span>za</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
@@ -26,8 +27,8 @@
                 <h3 class="banner-greeting"> Hi, I am </h3>
                 <h1 class="banner-title"> Hamza Bin Islam</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-picture" src="images/hardy.png" alt="">
         </div>
@@ -143,7 +144,7 @@
                 </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
 
             </div>
         </section>
