--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
-            <img class="profile-picture" src="images/hardy.png" alt="">
+            <img class="profile-picture" src="images/Me1.png" alt="">
         </div>
     </header>
     <main>
