Updated Banner description

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="banner-content">
                 <h3 class="banner-greeting"> Hi, I am </h3>
                 <h1 class="banner-title"> Hamza Bin Islam</h1>
-                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-description">Always curious, always coding <br>Let's build something together.</p>
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
