resume section hide

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
         </section>
         <!-- Resume section -->
-        <section>
+        <section class="hide">
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="resume-container">
                 <div class="resume-column">
