--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
         </p>
         <div class="social-links">
-          <a href="https://www.facebook.com/hbi.zahin/">
+          <a href="https://www.facebook.com/hbi.zahin/" target="_blank">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 512 512"
@@ -254,7 +254,7 @@
           </a>
 
           <a
-            href="https://www.instagram.com/hbizahin?igsh=MWt5NXp1c29iNGVmMQ=="
+            href="https://www.instagram.com/hbizahin?igsh=MWt5NXp1c29iNGVmMQ==" target="_blank"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -271,7 +271,7 @@
             </svg>
           </a>
 
-          <a href="https://github.com/hbizahin">
+          <a href="https://github.com/hbizahin" target="_blank">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 496 512"
@@ -287,7 +287,7 @@
             </svg>
           </a>
 
-          <a href="https://www.linkedin.com/in/hamza-bin-islam-035907214/">
+          <a href="https://www.linkedin.com/in/hamza-bin-islam-035907214/" target="_blank">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 448 512"
